Update Incident + UI improvements + ChartJs + Dashboard logic (3)

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -14,9 +14,18 @@
 		"partialdown": "Partial Outage",
 		"majordown": "Major Outage"
 	},
+	"updateStates": {
+		"identified": "Identified",
+		"planned": "Planned",
+		"investigating": "Investigating",
+		"update": "Update",
+		"watching": "Watching",
+		"resolved": "Resolved"
+	},
 	"actions": {
 		"backToList": "Back to List",
 		"cancel": "Cancel",
+		"choose": "Choose...",
 		"delete": "Delete",
 		"edit": "Edit",
 		"logout": "Logout",
@@ -56,10 +65,30 @@
 			"active": "Active Incidents",
 			"archived": "Archived Incidents",
 			"create": "Create New Incident",
+			"component": "Component",
+			"componentState": "Component State",
+			"content": "Content",
+			"date_placeholder": "YYYY/MM/DD",
+			"datetimeSeparator": "at",
+			"loadTemplate": "Load Template",
+			"missingCompRegion": "You must create a least one component <strong>and</strong> one region to create an incident!",
 			"openInfo": "Reported <strong>{{created}}</strong> and last updated <strong>{{updated}}</strong>.",
 			"postUpdate": "Post Update",
+			"regions": "Region(s)",
 			"save": "Save Incident",
-			"scheduledInfo": "Scheduled to start <strong>{{startdate}}</strong> with a planned duration of <strong>{{duration}}</strong>."
+			"scheduledInfo": "Scheduled to start <strong>{{startdate}}</strong> with a planned duration of <strong>{{duration}}</strong>.",
+			"scheduledEndOn": "and end on",
+			"scheduledStartOn": "Scheduled to start on",
+			"startedOn": "Started on",
+			"state": "State",
+			"summary": "Summary",
+			"summary_placeholder": "Incident Summary",
+			"time_placeholder": "HH:mm",
+			"timezone": "Reference Timezone",
+			"type": "Type",
+			"typeScheduled": "Scheduled Maintenance",
+			"typeUnplanned": "Unplanned Incident",
+			"update": "Update Incident"
 		},
 		"regions": {
 			"create": "New Region",
