--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -14,9 +14,18 @@
 		"partialdown": "Panne partielle",
 		"majordown": "Panne majeure"
 	},
+	"updateStates": {
+		"identified": "Identifié",
+		"planned": "Planifié",
+		"investigating": "Enquête en cours",
+		"update": "Mise à jour",
+		"watching": "Observation",
+		"resolved": "Réglé"
+	},
 	"actions": {
 		"backToList": "Retour à la liste",
 		"cancel": "Annuler",
+		"choose": "Choisir...",
 		"delete": "Supprimer",
 		"edit": "Modifier",
 		"logout": "Déconnexion",
@@ -56,10 +65,30 @@
 			"active": "Incidents actifs",
 			"archived": "Incidents archivés",
 			"create": "Créer un nouvel incident",
+			"component": "Composant",
+			"componentState": "État du composant",
+			"content": "Contenu",
+			"date_placeholder": "AAAA/MM/JJ",
+			"datetimeSeparator": "à",
+			"loadTemplate": "Ouvrir un modèle",
+			"missingCompRegion": "Vous devez créer au moins un composant <strong>et</strong> une région avant de créer un incident!",
 			"openInfo": "Ouvert <strong>{{created}}</strong> et mise à jour <strong>{{updated}}</strong>.",
 			"postUpdate": "Publier MAJ",
+			"regions": "Région(s)",
 			"save": "Enregistrer",
-			"scheduledInfo": "Planifié pour <strong>{{startdate}}</strong> avec une durée de <strong>{{duration}}</strong>."
+			"scheduledInfo": "Planifié pour <strong>{{startdate}}</strong> avec une durée de <strong>{{duration}}</strong>.",
+			"scheduledEndOn": "et finir le",
+			"scheduledStartOn": "Prévu de débuter le",
+			"startedOn": "A débuté le",
+			"state": "Statut",
+			"summary": "Sommaire",
+			"summary_placeholder": "Sommaire de l'incident",
+			"time_placeholder": "HH:mm",
+			"timezone": "Fuseau horaire de référence",
+			"type": "Type",
+			"typeScheduled": "Maintenance planifiée",
+			"typeUnplanned": "Incident imprévu",
+			"update": "MAJ de l'incident"
 		},
 		"regions": {
 			"create": "Nouvelle région",
