Added recently closed incidents logic (dashbord + admin)

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -64,6 +64,7 @@
 		"incidents": {
 			"active": "Active Incidents",
 			"archived": "Archived Incidents",
+			"closedInfo": "Resolved <strong>{{ended}}</strong> with a duration of <strong>{{duration}}</strong>.",
 			"create": "Create New Incident",
 			"component": "Component",
 			"componentState": "Component State",
