Dashboard UI improvements

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -105,16 +105,14 @@
 			"noRegionsCreatedYet": "No regions have been created yet."
 		},
 		"users": {
-			"create": "Create User",
+			"create": "Create Local User",
 			"create_title": "Enter new user info:",
-			"delete_title": "Are you sure you want to delete user <%= email %>?",
+			"delete_title": "Are you sure you want to delete user <%= email %> [<%= provider %>]?",
 			"displayLanguage": "Display Language",
 			"email": "Email",
 			"email_placeholder": "e.g. john@company.com",
-			"firstName": "First Name",
-			"firstName_placeholder": "e.g. John",
-			"lastName": "Last Name",
-			"lastName_placeholder": "e.g. Smith",
+			"name": "Name",
+			"name_placeholder": "e.g. John Smith",
 			"myAccount": "My Account",
 			"password": "Password",
 			"password_placeholder": "Password (min 8 chars.)",
