--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -66,7 +66,7 @@
 			"active": "Active Incidents",
 			"archived": "Archived Incidents",
 			"closedInfo": "Resolved <strong>{{ended}}</strong> with a duration of <strong>{{duration}}</strong>.",
-			"create": "Create New Incident",
+			"create": "New Incident",
 			"component": "Component",
 			"componentState": "Component State",
 			"content": "Content",
